# purr

./: Cargo.toml  LICENSE  README.md
assets/: config.toml  style.toml
src/: cfg.rs  main.rs
src/api/: server.rs  status.rs
src/command/: config.rs  status.rs
src/gui/: mod.rs
