[package]
name = "purr"
version = "0.1.0"
authors = ["SkyezerFox <actuallyori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
config = "0.10"
cursive = { version = "0.15", features = ["toml"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.118", features = ["derive"] }
